Fix: Changes of the project for paseto system